--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,22 @@
-name: CI for Dhanush DevOps Project
+name: CI/CD for Dhanush DevOps Project
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Show files
-        run: ls -R
-
-      - name: Validate HTML file exists
-        run: |
-          if [ ! -f "index.html" ]; then
-            echo "index.html not found!"
-            exit 1
-          fi
-          echo "index.html found ✅"
-
       - name: Build Docker image
-        run: |
-          docker build -t devops-ci-cd-project:latest .
-          echo "Docker image built successfully ✅"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-ci-cd-project:latest .
+
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Push image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-ci-cd-project:latest
